# lab_2

./: CMakeLists.txt
api/: CMakeLists.txt  api.cpp
files/: file_in.txt  file_numbers.txt
src/: CMakeLists.txt
src/qsort/: CMakeLists.txt  QSort.cpp  QSort.h
src/static_lib/: CMakeLists.txt  StaticLib.cpp  StaticLib.h
